--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="header_nav">
             <a href="#"><img src="img/logo.png" alt="logo"></a>
             <ul class="menu_links">
-                <li><a href="#">HOMEeeeeeeee</a></li>
+                <li><a href="#">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#services">SERVICES</a></li>
                 <li><a href="#price">PRICING</a></li>
